# prediction-comportement-clients

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md
scripts/: train.py
src/customer_analysis/: __init__.py
src/customer_analysis/config/: __init__.py  settings.py
src/customer_analysis/data/: __init__.py  generator.py
src/customer_analysis/features/: __init__.py  engineering.py
src/customer_analysis/models/: __init__.py  predictors.py
src/customer_analysis/visualization/: __init__.py  exporter.py
tests/: __init__.py  test_data.py  test_features.py
